[package]
name = "qshard"
version = "0.1.0"
edition = "2024"
authors = ["therealsylva"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
aes-gcm = "0.10"
thiserror = "1.0"
base64 = "0.21"
bincode = "1.3"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
zeroize = { version = "1.6", features = ["zeroize_derive"] }
anyhow = "1.0"
indicatif = "0.17"
rpassword = "7.2"
shamirsecretsharing = "0.1.4"
hex = "0.4"
